--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ langchain-core~=0.3.0
 langchain-openai~=0.2.0
 langchain-google-genai~=2.0.0
 langchain-text-splitters~=0.3.0
+langchain-ollama
 pydantic~=2.0
 pinecone~=5.0
 pinecone-plugin-assistant~=3.0
