Fixed dependencies issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ langchain-text-splitters>=1.1.0
 pydantic>=2.0
 pinecone>=5.4.2
 pinecone-plugin-assistant>=3.0
+pinecone-text
 pypdfium2>=5.0
 python-docx>=1.0
 pdfplumber>=0.11
