--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain-openai>=0.2.0
 langchain-google-genai>=2.0.0
 langchain-ollama
 langchain-community
+langsmith
 tavily-python
 langchain-text-splitters>=1.1.0
 pydantic>=2.0
